--- a/arch/arm/configs/aopp_hammerhead_defconfig
+++ b/arch/arm/configs/aopp_hammerhead_defconfig
@@ -3215,7 +3215,7 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_LOGFS is not set
 # CONFIG_CRAMFS is not set
 CONFIG_SQUASHFS=y
-# CONFIG_SQUASHFS_XATTR is not set
+CONFIG_SQUASHFS_XATTR=y
 CONFIG_SQUASHFS_ZLIB=y
 CONFIG_SQUASHFS_LZO=y
 CONFIG_SQUASHFS_XZ=y
